# CCLogger

./: CMakeLists.txt  README.md  main.cpp
IO/: fileio.h  io.h  stdio.h
cached_queue/: logger_queue.cpp  logger_queue.h
core/: logger_tools.cpp  logger_tools.h
example/: CMakeLists.txt  example_usage.cpp  format_set.cpp
format/: logger_format.cpp  logger_format.h
logger/: logger.cpp  logger.h
test/: CMakeLists.txt  test_format.cpp  test_logger.cpp  test_queue.cpp
